--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -11,7 +11,7 @@
     <title>Amit Kumar Goswami</title>
 </head>
 <body>
-   <section class="top-banner">
+   <section class="top-banner flexible-container">
     <div class="half-width">
         <h1>Welcome To</h1>
         <h1><span>Amit Goswami</span> World</h1>
@@ -25,7 +25,7 @@
    </section>
 
 
-   <section class="dream-area">
+   <section class="dream-area flexible-container">
        <div class="half-width">
             <img src="images/3.jpg" alt="">
        </div>
@@ -37,5 +37,26 @@
             <a class="anchor-button" href="">DOWNLOAD RESUME</a>
         </div>
    </section>
+
+   <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div class="helf-width" id="full-stack">
+                <h2>Full Stack Web Developer</h2>
+                <h3>2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called React Js , Node Js. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+    
+            <div class="helf-width" id="baby-web">
+                <h2>Baby Web Developer</h2>
+                <h3>2021-2022 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remote web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+   </section>
+
+    <footer>
+        <p>© Amit Kumar Goswami 2021, a Copywrite will reserved.</p>
+    </footer>
 </body>
 </html>
