--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -17,7 +17,7 @@
         <h1><span>Amit Goswami</span> World</h1>
         <h3>Build Climber and Train Stopper</h3>
         <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
-        <a class="HireMe-button" target="_blank" href="https://www.linkedin.com/company/programminghero/">HIRE ME</a>
+        <a class="HireMe-button" target="_blank" href="https://www.linkedin.com/in/amit-goswami1/">HIRE ME</a>
     </div>
     <div class="half-width">
         <img src="images/bg.jpg" alt="">
